[package]
name = "mathbox"
version = "0.1.0"
authors = ["freedeaths <register917@gmail.com>"]
edition = "2021"
description = "A math toolbox"
keywords = ["math", "data-prcessing"]
categories = ["Mathematics"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/freedeaths/mathbox-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mathbox"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

#[[example]]
#name = ""
#crate-type = 

[dependencies]
rand = "0.8.4"
num = "0.4.0"
find_peaks = "0.1.2"

[dev-dependencies]
approx = "0.5.0"
plotters = "0.3.1"
csv = "1.1.6"
clap = { version = "3.0.13", features = ["derive"] }